testing service, model, controller